# push_swap_checker

./: 123  CMakeLists.txt  checker.c  move_stack.c  move_stack2.c  push_swap_checker.h  sub.c  usage.c
